--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <title>Semana da Consnciência Negra</title>
 </head>
 <body>
+    <section>
  
+        <div>
     <header>SEMANA DA CONCIÊNCIA NEGRA</header>
     <h1>CONHECENDO UM POUCO MAIS DA NOSSA HISTÓRIA</h1>
     <p>ASSISTA O VÍDEO</p>
+    <div>
+<div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/0HFjNBuUBDU?si=H-60hM-ND-4D3HOM&quot; title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-</body>
+
+
+
+
+</section>
+</div>
+<section>
+</boldy>
+
 </html>
